--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,13 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Unicase:wght@300;700&family=Oswald:wght@700&family=Raleway:ital,wght@0,400;0,500;1,300;1,400&family=Slabo+27px&display=swap" rel="stylesheet">      
+    
+   <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  </noscript>
     <div id="app"></div>
+    
     <!-- built files will be auto injected -->
   </body>
 </html>
